src/objects/OrganizationString__c.object
<CustomObject>
    <fields>
        <fullName>clAECOMUSGovtExperienceCode__c</fullName>
        <label>AECOM US Govt Experience Code</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A0 - International Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A00 - Unassigned Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A01 - Acoustics, Noise Abateme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A02 - Aerial Photo, Data Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A03 - Agricultural Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A04 - Air Pollution Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A05 - Airport,Nav,lights,fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A06 - Airport, Terminal, Hanga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A07 - Arctic Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A08 - Animal Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A09 - Anti Terrorism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10 - Asbestos Abatement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A11 - Auditoriums Theatres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A12 - Automation, Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B01 - Barracks Dormitories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B02 - Bridges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C01 - Cartography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C02 - Cemeteries,Plan and Relo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C03 - Chart Aero and Nautical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C04 - Chem Processing Storeage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C05 - Childcare / Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C06 - Churches Chapels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C07 - Coastal Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C08 - Codes, Standards, Ordina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C09 - Cold Store, Fast Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C10 - Commercial Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C11 - Community Facilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMWorkSiteStateCountry__c</fullName>
        <label>AECOM Work Site State Country</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0_Multiple Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acension Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta, Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashmore and Cartier Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic Ocean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAECOMWork__c</fullName>
        <label>AECOM Work</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Repositioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogeneration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial &amp; Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Interiors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway &amp; Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydropower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Assmt &amp; Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial &amp; Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office - Core &amp; Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port &amp; Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail &amp; Transit Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remediation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAIMSHeritageCompany__c</fullName>
        <label>AIMS Heritage Company</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASSETT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL AUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL DEGW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL IRL FML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDAW AUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDAW UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDAW US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET (Can)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPOWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURVCON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCnB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clANZContractType__c</fullName>
        <label>ANZ Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Intercompany Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Standard Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS4122</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Contract-Tender Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPENZ/ACENZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMD Reviewed – No Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZ-Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clANZEmergingMarket__c</fullName>
        <label>ANZ Emerging Market</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCM Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intelligent Transport Sys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iron Ore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ports and Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clANZGrowthMarket__c</fullName>
        <label>ANZ Growth Market</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property &amp; Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clANZKeyClient__c</fullName>
        <label>ANZ Key Client</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT Health Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actew AGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGL Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglo American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrow Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auckland Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auckland Stormwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auckland Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ausgrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barwon Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baulderstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHP Billiton Iron Ore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHP Petroleum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPB Base Metals (Cu,U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPB Coal (Metallurgical)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPB Coal (Thermal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPB Nickel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPB Uranium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brisbane City Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brookfield Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caltex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Infrastructure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clANZRDQualified__c</fullName>
        <label>ANZ R&amp;D Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clANZRiskCategory__c</fullName>
        <label>ANZ Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAPICEACStatus__c</fullName>
        <label>APIC EAC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAPICPSRStatus__c</fullName>
        <label>APIC PSR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clASIAWithInterCompaniesSupp__c</fullName>
        <label>ASIA With Inter Companies Supp</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clASIAWithIntraCompaniesSupp__c</fullName>
        <label>ASIA With Intra Companies Supp</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAmericasRDServiceType__c</fullName>
        <label>Americas RD Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manpower Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveying</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clAsiaSubBusinessLine__c</fullName>
        <label>Asia Sub Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Building Structures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - MMTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Specialisms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Specialty Structures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Air Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Emerg&apos; Serv, Climate Chge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Env Hlth &amp; Sfty Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Impact Assmt &amp; Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Remdtn Const/St Rest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Remdtn Consultg / Eng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Risk Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Waste Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Water &amp; Natural Resrcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Building Surveying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Business Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Certification Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Cost Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Development Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Eng. PMCM Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Facilities Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC - Fiscal Incentives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clCanadaACLLegacyLegalEntity__c</fullName>
        <label>Canada ACL Legacy Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM CANADA ARCHITECTS LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM CANADA LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM CONSULT INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM CONSULTANTS INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAWASHEKAMI ENVIRONMENT INC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clEMClientEndMarket__c</fullName>
        <label>EM Client End Market</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Govts (non-US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Federal Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. DOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Federal Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Federal Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Federal Navy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>